# pirate

./: .clang-tidy  .gitignore  pirate.hpp
__tests__/: CMakeLists.txt  arguments.tests.cpp  testing.cpp
types/: arg_types.hpp
